--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "convert": "^4.5.0",
+    "cors": "^2.8.5",
     "date-and-time": "^2.3.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
